changes made by QCT