@@ -34,17 +34,17 @@ import java.util.Set;
 import javax.net.ssl.HostnameVerifier;
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.SSLSession;
-import javax.ws.rs.ProcessingException;
-import javax.ws.rs.client.Client;
-import javax.ws.rs.client.ClientBuilder;
-import javax.ws.rs.client.Invocation;
-import javax.ws.rs.client.WebTarget;
-import javax.ws.rs.core.Cookie;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.NewCookie;
-import javax.ws.rs.core.Response;
+import jakarta.ws.rs.ProcessingException;
+import jakarta.ws.rs.client.Client;
+import jakarta.ws.rs.client.ClientBuilder;
+import jakarta.ws.rs.client.Invocation;
+import jakarta.ws.rs.client.WebTarget;
+import jakarta.ws.rs.core.Cookie;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.NewCookie;
+import jakarta.ws.rs.core.Response;
 
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.security.AccessControlException;
 import org.apache.hadoop.security.UserGroupInformation;
@@ -126,7 +126,7 @@ public class RangerAdminJersey2RESTClient extends AbstractRangerAdminClient {
 		this.lastKnownActiveUrlIndex = new Random().nextInt(configURLs.size());
 		String url = configURLs.get(this.lastKnownActiveUrlIndex);
 		_isSSL = isSsl(url);
-		LOG.info("Init params: " + String.format("Base URL[%s], SSL Config filename[%s], ServiceName=[%s], SupportsPolicyDeltas=[%s], ConfigURLs=[%s]", url, _sslConfigFileName, _serviceName, _supportsPolicyDeltas, _supportsTagDeltas, configURLs));
+		LOG.info("Init params: " + "Base URL[%s], SSL Config filename[%s], ServiceName=[%s], SupportsPolicyDeltas=[%s], ConfigURLs=[%s]".formatted(url, _sslConfigFileName, _serviceName, _supportsPolicyDeltas, _supportsTagDeltas, configURLs));
 		
 		_client = getClient();
 		_client.property(ClientProperties.CONNECT_TIMEOUT, _restClientConnTimeOutMs);
@@ -210,7 +210,7 @@ public class RangerAdminJersey2RESTClient extends AbstractRangerAdminClient {
 			throw new AccessControlException();
 		default:
 			String body = response.readEntity(String.class);
-			String message = String.format("Unexpected: Received status[%d] with body[%s] form url[%s]", httpResponseCode, body, relativeURL);
+			String message = "Unexpected: Received status[%d] with body[%s] form url[%s]".formatted(httpResponseCode, body, relativeURL);
 			LOG.warn(message);
 			throw new Exception("HTTP status: " + httpResponseCode);
 		}
@@ -246,7 +246,7 @@ public class RangerAdminJersey2RESTClient extends AbstractRangerAdminClient {
 			throw new AccessControlException();
 		default:
 			String body = response.readEntity(String.class);
-			String message = String.format("Unexpected: Received status[%d] with body[%s] form url[%s]", httpResponseCode, body, relativeURL);
+			String message = "Unexpected: Received status[%d] with body[%s] form url[%s]".formatted(httpResponseCode, body, relativeURL);
 			LOG.warn(message);
 			throw new Exception("HTTP status: " + httpResponseCode);
 		}
@@ -582,7 +582,7 @@ public class RangerAdminJersey2RESTClient extends AbstractRangerAdminClient {
 				ret = null;
 				policyDownloadSessionId = null;
 				body = response.readEntity(String.class);
-				LOG.warn(String.format("Unexpected: Received status[%d] with body[%s] form url[%s]", httpResponseCode, body, getRelativeURL(isSecureMode())));
+				LOG.warn("Unexpected: Received status[%d] with body[%s] form url[%s]".formatted(httpResponseCode, body, getRelativeURL(isSecureMode())));
 				break;
 		}
 
@@ -649,7 +649,7 @@ public class RangerAdminJersey2RESTClient extends AbstractRangerAdminClient {
 				policyDownloadSessionId = null;
 				isValidPolicyDownloadSessionCookie = false;
 				body = response.readEntity(String.class);
-				LOG.warn(String.format("Unexpected: Received status[%d] with body[%s] form url[%s]", httpResponseCode, body, getRelativeURL(isSecureMode())));
+				LOG.warn("Unexpected: Received status[%d] with body[%s] form url[%s]".formatted(httpResponseCode, body, getRelativeURL(isSecureMode())));
 				break;
 		}
 
@@ -787,7 +787,7 @@ public class RangerAdminJersey2RESTClient extends AbstractRangerAdminClient {
 				ret = null;
 				tagDownloadSessionId = null;
 				body = response.readEntity(String.class);
-				LOG.warn(String.format("Unexpected: Received status[%d] with body[%s] form url[%s]", httpResponseCode, body, getRelativeURLForTagDownload(isSecureMode())));
+				LOG.warn("Unexpected: Received status[%d] with body[%s] form url[%s]".formatted(httpResponseCode, body, getRelativeURLForTagDownload(isSecureMode())));
 				break;
 		}
 
@@ -854,7 +854,7 @@ public class RangerAdminJersey2RESTClient extends AbstractRangerAdminClient {
 				tagDownloadSessionId = null;
 				isValidTagDownloadSessionCookie = false;
 				body = response.readEntity(String.class);
-				LOG.warn(String.format("Unexpected: Received status[%d] with body[%s] form url[%s]", httpResponseCode, body, ret));
+				LOG.warn("Unexpected: Received status[%d] with body[%s] form url[%s]".formatted(httpResponseCode, body, ret));
 				break;
 		}
 
@@ -990,7 +990,7 @@ public class RangerAdminJersey2RESTClient extends AbstractRangerAdminClient {
 				ret = null;
 				roleDownloadSessionId = null;
 				body = response.readEntity(String.class);
-				LOG.warn(String.format("Unexpected: Received status[%d] with body[%s] form url[%s]", httpResponseCode, body, getRelativeURLForRoleDownload(isSecureMode())));
+				LOG.warn("Unexpected: Received status[%d] with body[%s] form url[%s]".formatted(httpResponseCode, body, getRelativeURLForRoleDownload(isSecureMode())));
 				break;
 		}
 
@@ -1056,7 +1056,7 @@ public class RangerAdminJersey2RESTClient extends AbstractRangerAdminClient {
 				roleDownloadSessionId = null;
 				isValidRoleDownloadSessionCookie = false;
 				body = response.readEntity(String.class);
-				LOG.warn(String.format("Unexpected: Received status[%d] with body[%s] form url[%s]", httpResponseCode, body, getRelativeURLForRoleDownload(isSecureMode())));
+				LOG.warn("Unexpected: Received status[%d] with body[%s] form url[%s]".formatted(httpResponseCode, body, getRelativeURLForRoleDownload(isSecureMode())));
 				break;
 		}
 
