@@ -30,6 +30,7 @@ import org.apache.atlas.authorize.AtlasAuthorizer;
 import org.apache.ranger.plugin.classloader.RangerPluginClassLoader;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import java.lang.reflect.InvocationTargetException;
 
 public class RangerAtlasAuthorizer implements AtlasAuthorizer {
     private static final Logger LOG = LoggerFactory.getLogger(RangerAtlasAuthorizer.class);
@@ -63,7 +64,7 @@ public class RangerAtlasAuthorizer implements AtlasAuthorizer {
 
 			activatePluginClassLoader();
 
-			rangerAtlasAuthorizerImpl = cls.newInstance();
+			rangerAtlasAuthorizerImpl = cls.getDeclaredConstructor().newInstance();
 		} catch (Exception e) {
 			// check what need to be done
 			LOG.error("Error Enabling RangerAtlasPlugin", e);
