@@ -29,6 +29,7 @@ import org.apache.hadoop.hive.ql.security.authorization.plugin.HiveAuthzSessionC
 import org.apache.ranger.plugin.classloader.RangerPluginClassLoader;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import java.lang.reflect.InvocationTargetException;
 
 
 public class RangerHiveAuthorizerFactory implements HiveAuthorizerFactory {
@@ -69,7 +70,7 @@ public class RangerHiveAuthorizerFactory implements HiveAuthorizerFactory {
 
 			activatePluginClassLoader();
 			
-			rangerHiveAuthorizerFactoryImpl  = cls.newInstance();
+			rangerHiveAuthorizerFactoryImpl  = cls.getDeclaredConstructor().newInstance();
 
 		} catch (Exception e) {
             // check what need to be done
