@@ -30,6 +30,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletionStage;
@@ -53,7 +54,7 @@ public class RangerKafkaAuthorizer implements Authorizer {
 
   private static String toString(AuthorizableRequestContext requestContext) {
     return requestContext == null ? null :
-        String.format("AuthorizableRequestContext{principal=%s, clientAddress=%s, clientId=%s}",
+			"AuthorizableRequestContext{principal=%s, clientAddress=%s, clientId=%s}".formatted(
             requestContext.principal(), requestContext.clientAddress(), requestContext.clientId());
   }
 
@@ -69,7 +70,10 @@ public class RangerKafkaAuthorizer implements Authorizer {
 
       activatePluginClassLoader();
 
-      rangerKafkaAuthorizerImpl = cls.newInstance();
+      rangerKafkaAuthorizerImpl = cls.getDeclaredConstructor().newInstance();
+    } catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
+      logger.error("Error Enabling RangerKafkaPlugin", e);
+      throw new IllegalStateException("Error Enabling RangerKafkaPlugin", e);
     } catch (Exception e) {
       logger.error("Error Enabling RangerKafkaPlugin", e);
       throw new IllegalStateException("Error Enabling RangerKafkaPlugin", e);
