@@ -28,6 +28,7 @@ import org.apache.hadoop.security.UserGroupInformation;
 import org.apache.ranger.plugin.classloader.RangerPluginClassLoader;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import java.lang.reflect.InvocationTargetException;
 
 public class RangerKmsAuthorizer implements Runnable, KeyACLs {
 
@@ -67,7 +68,7 @@ public class RangerKmsAuthorizer implements Runnable, KeyACLs {
 
 			activatePluginClassLoader();
 
-			impl 			   = cls.newInstance();
+			impl 			   = cls.getDeclaredConstructor().newInstance();
 			implRunnable       = (Runnable)impl;
 			implKeyACLs 	   = (KeyACLs)impl;
 		} catch (Exception e) {
