@@ -19,13 +19,14 @@
 package org.apache.ranger.authorization.knox;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 
-import javax.servlet.Filter;
-import javax.servlet.FilterChain;
-import javax.servlet.FilterConfig;
-import javax.servlet.ServletException;
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
+import jakarta.servlet.Filter;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.FilterConfig;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
 
 import org.apache.ranger.plugin.classloader.RangerPluginClassLoader;
 import org.slf4j.Logger;
@@ -66,8 +67,8 @@ public class RangerPDPKnoxFilter implements Filter {
 
 			activatePluginClassLoader();
 
-			rangerPDPKnoxFilteImpl = cls.newInstance();
-		} catch (Exception e) {
+			rangerPDPKnoxFilteImpl = cls.getDeclaredConstructor().newInstance();
+		} catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException | ClassNotFoundException e) {
 			// check what need to be done
 			LOG.error("Error Enabling RangerKnoxPlugin", e);
 		} finally {
