@@ -22,6 +22,7 @@ package org.apache.ranger.authorization.solr.authorizer;
 
 import java.io.IOException;
 import java.util.Map;
+import java.lang.reflect.InvocationTargetException;
 
 import org.apache.ranger.plugin.classloader.RangerPluginClassLoader;
 import org.apache.solr.common.StringUtils;
@@ -70,9 +71,12 @@ public class RangerSolrAuthorizer extends SearchComponent implements Authorizati
 
 			activatePluginClassLoader();
 
-			Object impl = cls.newInstance();
+            Object impl = cls.getDeclaredConstructor().newInstance();
 			rangerSolrAuthorizerImpl = (AuthorizationPlugin)impl;
 			rangerSearchComponentImpl = (SearchComponent)impl;
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
+            // check what need to be done
+            LOG.error("Error Enabling RangerSolrPlugin", e);
 		} catch (Exception e) {
 			// check what need to be done
 			LOG.error("Error Enabling RangerSolrPlugin", e);
