@@ -31,6 +31,7 @@ import org.apache.hadoop.yarn.security.YarnAuthorizationProvider;
 import org.apache.ranger.plugin.classloader.RangerPluginClassLoader;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import java.lang.reflect.InvocationTargetException;
 
 
 
@@ -69,7 +70,7 @@ public class RangerYarnAuthorizer extends YarnAuthorizationProvider {
 
 			activatePluginClassLoader();
 
-			yarnAuthorizationProviderImpl = cls.newInstance();
+			yarnAuthorizationProviderImpl = cls.getDeclaredConstructor().newInstance();
 		} catch (Exception e) {
 			// check what need to be done
 			LOG.error("Error Enabling RangerYarnPlugin", e);
