@@ -220,8 +220,7 @@ public class ElasticSearchUtil {
                 QueryBuilder negativeQuery = getQueryBuilder(dataType, searchType, fieldName.substring(1), paramValue);
                 return null == negativeQuery ? null : QueryBuilders.boolQuery().mustNot(negativeQuery);
             }
-            if (paramValue instanceof Collection) {
-                Collection<?> valueList = (Collection<?>) paramValue;
+            if (paramValue instanceof Collection<?> valueList) {
                 if (valueList.isEmpty()) {
                     return null;
                 } else {
@@ -235,8 +234,8 @@ public class ElasticSearchUtil {
             } else {
                 if (dataType == SearchField.DATA_TYPE.DATE) {
                     if (!(paramValue instanceof Date)) {
-                        logger.error(String.format(
-                            "Search value is not a Java Date Object: %s %s %s",
+                        logger.error(
+								"Search value is not a Java Date Object: %s %s %s".formatted(
                             fieldName, searchType, paramValue));
                     } else {
                         if (searchType == SearchField.SEARCH_TYPE.GREATER_EQUAL_THAN
@@ -254,7 +253,7 @@ public class ElasticSearchUtil {
                         || searchType == SearchField.SEARCH_TYPE.GREATER_THAN
                         || searchType == SearchField.SEARCH_TYPE.LESS_EQUAL_THAN
                         || searchType == SearchField.SEARCH_TYPE.LESS_THAN) { //NOPMD
-                    logger.warn(String.format("Range Queries Not Implemented: %s %s %s",
+                    logger.warn("Range Queries Not Implemented: %s %s %s".formatted(
                         fieldName, searchType, paramValue));
                     return null;
                 } else {
