@@ -22,9 +22,10 @@ import java.lang.reflect.TypeVariable;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.lang.reflect.InvocationTargetException;
 
-import javax.persistence.EntityManager;
-import javax.persistence.Query;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.Query;
 
 import org.apache.ranger.biz.RangerBizUtil;
 import org.apache.ranger.common.ContextUtil;
@@ -126,8 +127,8 @@ public abstract class RangerBaseModelService<T extends XXDBBase, V extends Range
 
 	protected T createEntityObject() {
 		try {
-			return tEntityClass.newInstance();
-		} catch (Throwable e) {
+			return tEntityClass.getDeclaredConstructor().newInstance();
+		} catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
 			LOG.error("Error instantiating entity class. tEntityClass="
 					+ tEntityClass.toString(), e);
 		}
@@ -136,8 +137,8 @@ public abstract class RangerBaseModelService<T extends XXDBBase, V extends Range
 
 	protected V createViewObject() {
 		try {
-			return tViewClass.newInstance();
-		} catch (Throwable e) {
+			return tViewClass.getDeclaredConstructor().newInstance();
+		} catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
 			LOG.error("Error instantiating view class. tViewClass="
 					+ tViewClass.toString(), e);
 		}
