@@ -19,10 +19,11 @@
 
 package org.apache.ranger.tagsync.source.atlas;
 
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.ranger.plugin.model.RangerServiceResource;
 
 import java.util.*;
+import java.lang.reflect.InvocationTargetException;
 
 import org.apache.ranger.tagsync.process.TagSyncConfig;
 import org.apache.ranger.tagsync.source.atlasrest.RangerAtlasEntity;
@@ -102,7 +103,7 @@ public class AtlasResourceMapperUtil {
 		for (String mapperName : mapperNames) {
 			try {
 				Class<?> clazz = Class.forName(mapperName);
-				AtlasResourceMapper resourceMapper = (AtlasResourceMapper) clazz.newInstance();
+				AtlasResourceMapper resourceMapper = (AtlasResourceMapper) clazz.getDeclaredConstructor().newInstance();
 
 				resourceMapper.initialize(properties);
 
@@ -110,7 +111,7 @@ public class AtlasResourceMapperUtil {
 					add(entityTypeName, resourceMapper);
 				}
 
-			} catch (Exception exception) {
+			} catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException exception) {
 				LOG.error("Failed to create AtlasResourceMapper:" + mapperName + ": ", exception);
 				ret = false;
 			}
